<?xml version="1.0"?>
<package format="2">
  <name>Sony_FDR-X3000</name>
  <version>0.0.0</version>
  <description>The Sony_FDR-X3000 package</description>
  <maintainer email="moonjongsul@keti.re.kr">Jongsul Moon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>



  <export>

  </export>
</package>
